[package]
name = "gurka"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]

[[test]]
name = "cucumber"
harness = false

[dependencies]
diesel = { version = "^1.3.2", features = ["postgres", "uuid"] }
r2d2 = "^0.8.2"
r2d2-diesel = "^1.0.0"
dotenv = "^0.13.0"
derive_builder = "^0.5.1"
juniper = "^0.9.2"
juniper_relay = "^0.0.1"
juniper_rocket = "^0.1.2"
rocket = "^0.3.15"
rocket_codegen = "^0.3.15"
base64 = "^0.9.2"
ring = "0.11.0"
heck = "^0.3.0"
uuid = { version = "0.6.5", features = ["v4"] }
backtrace = "^0.3.9"

[dev-dependencies]
# cucumber_rust = "^0.2.0"
cucumber_rust = { path = "../cucumber-rust"}

[patch.crates-io]
# gherkin_rust = { path = "../gherkin-rust"}
